Update search_walkin trail 003.html

--- a/search_walkin trail 003.html
+++ b/search_walkin trail 003.html
@@ -93,13 +93,13 @@
     const walkInsData = [
       {
         company: "Company A",
-        jobRole: "Java",
+        jobRole: "Python",
         location: "Hyderabad",
         otherDetails: "CTC: $50,000, Skills Required: HTML, CSS, JavaScript, Bond: 2 years, Notice Period: 30 days"
       },
       {
         company: "Company B",
-        jobRole: "Java",
+        jobRole: "Testing",
         location: "S.R.Nagar",
         otherDetails: "CTC: $60,000, Skills Required: Python, SQL, Bond: None, Notice Period: Immediate"
       },
